terraform/templates/azure_kubernetes_cluster/aks-network.tf
# resource "azurerm_network_security_group" "aks-nsg" {
#   name                = "${azurerm_virtual_network.this.name}-${azurerm_subnet.aks.name}-nsg"
#   resource_group_name = azurerm_resource_group.this.name
#   location            = azurerm_resource_group.this.location
# }

# resource "azurerm_subnet_network_security_group_association" "subnet" {
#   subnet_id                 = azurerm_subnet.aks.id
#   network_security_group_id = azurerm_network_security_group.aks-nsg.id
# }

# # # Associate Route Table to AKS Subnet
# resource "azurerm_subnet_route_table_association" "rt_association" {
#   subnet_id      = azurerm_subnet.aks.id
#   route_table_id = azurerm_route_table.route_table.id
# }
